# PythonLog

./: README.md  blog.db  blog.sqbpro  main.py  other_blueprint.py  pyproject.toml  readme2.md  requirements.txt
static/css/: clean-blog.css  clean-blog.min.css
static/scss/: _footer.scss
templates/: about.html  contact.html  footer.html  header.html  index.html  login.html  make-post.html  post.html  register.html
